--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,8 @@
 
       <div class="header-social-links">
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/an_an_th_66_33?igsh=MXRqZHBhZXl3a3BldQ== " class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/01ananth-s/" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
