--- a/contact.html
+++ b/contact.html
@@ -176,17 +176,12 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">ANANTH</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/an_an_th_66_33?igsh=MXRqZHBhZXl3a3BldQ=="><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/01ananth-s/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href=“https://themewagon.com>ThemeWagon
+        Designed by <a href="https://www.linkedin.com/in/01ananth-s/">ANANTH</a> Distributed by <a href=“https://themewagon.com>ADMIN
       </div>
     </div>
 
