--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-8">
             <h2>ANANTH </h2>
-            <p>I'm a professional working </p>
+            <p>I’m a professional web developer specializing in modern, responsive websites.</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
         </div>
