Updated website content

--- a/resume.html
+++ b/resume.html
@@ -1,80 +1,166 @@
-<section id="resume" class="resume section">
-  <div class="container section-title" data-aos="fade-up">
-    <h2>Resume</h2>
-    <p>Experienced and certified System Administrator with strong skills in network management, server handling, and IT infrastructure.</p>
-  </div>
+<!DOCTYPE html>
+<html lang="en">
 
-  <div class="container">
-    <div class="row">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Resume - ANANTH</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
 
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-        <h3 class="resume-title">Summary</h3>
-        <div class="resume-item pb-0">
-          <h4>Ananth S</h4>
-          <p><em>Detail-oriented System Administrator with expertise in managing servers, networks, and user support. Skilled in automation, security, and problem-solving with experience supporting over 300 users.</em></p>
-          <ul>
-            <li>5/272, Kappaloothu, Karkoodalpatti, Rasipuram, Namakkal</li>
-            <li>+91 9047075909</li>
-            <li><a href="mailto:ananth9280@gmail.com">ananth9280@gmail.com</a></li>
-            <li><a href="https://www.linkedin.com/in/01ananth-s">linkedin.com/in/01ananth-s</a></li>
-          </ul>
-        </div>
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-        <h3 class="resume-title">Education</h3>
-        <div class="resume-item">
-          <h4>Master of Computer Applications</h4>
-          <h5>Aug 2021 - Aug 2023</h5>
-          <p><em>Paavai Engineering College</em></p>
-          <p>Scored 65% in MCA with a focus on system administration and IT infrastructure.</p>
-        </div>
-        <div class="resume-item">
-          <h4>B.Com in Computer Applications</h4>
-          <h5>Aug 2016 - Oct 2019</h5>
-          <p><em>Muthayammal College of Arts and Science</em></p>
-          <p>Graduated with 60% focusing on foundational computing and commerce.</p>
-        </div>
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com" rel="preconnect">
+  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-        <h3 class="resume-title">Certifications</h3>
-        <div class="resume-item">
-          <ul>
-            <li>Linux OS (OpenSUSE) – Mar 2024</li>
-            <li>Cisco CCNA 200-125 – Mar 2024</li>
-            <li>ENCOR: LISP & VXLAN – Apr 2024</li>
-            <li>Introduction to Networks – Dec 2024</li>
-            <li>AWS Academy Data Engineering – Apr 2025</li>
-            <li>AWS Academy Machine Learning – Apr 2025</li>
-          </ul>
-        </div>
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+
+  <!-- Main CSS File -->
+  <link href="assets/css/main.css" rel="stylesheet">
+</head>
+
+<body class="resume-page">
+  <header id="header" class="header d-flex align-items-center light-background sticky-top">
+    <div class="container-fluid position-relative d-flex align-items-center justify-content-between">
+      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <h1 class="sitename">Ananth S</h1>
+      </a>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="resume.html" class="active">Resume</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+      <div class="header-social-links">
+        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
-
-      <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="resume-title">Professional Experience</h3>
-        <div class="resume-item">
-          <h4>System Administrator</h4>
-          <h5>May 2023 – June 2025</h5>
-          <p><em>Infosys Springboard</em></p>
-          <ul>
-            <li>Provided technical support for over 300 users including hardware, software, and network troubleshooting.</li>
-            <li>Configured and monitored firewalls, antivirus, and VPNs for secure access.</li>
-            <li>Managed Windows and Linux servers to ensure high availability and uptime.</li>
-          </ul>
-        </div>
-
-        <h3 class="resume-title">Projects</h3>
-        <div class="resume-item">
-          <h4>Network Infrastructure Upgrade – Paavai Institutions</h4>
-          <ul>
-            <li>Upgraded campus-wide network switches and firewalls, reducing downtime by 30% and improving security.</li>
-          </ul>
-        </div>
-        <div class="resume-item">
-          <h4>Automated Backup System Using PowerShell</h4>
-          <ul>
-            <li>Developed a scheduled backup script with daily incremental backups, error logging, and reporting.</li>
-          </ul>
-        </div>
-      </div>
-
     </div>
-  </div>
-</section>
+  </header>
+
+  <main class="main">
+    <section id="resume" class="resume section">
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Resume</h2>
+        <p>Experienced and certified System Administrator with strong skills in network management, server handling, and IT infrastructure.</p>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">Summary</h3>
+            <div class="resume-item pb-0">
+              <h4>Ananth S</h4>
+              <p><em>Detail-oriented System Administrator with expertise in managing servers, networks, and user support. Skilled in automation, security, and problem-solving with experience supporting over 300 users.</em></p>
+              <ul>
+                <li>5/272, Kappaloothu, Karkoodalpatti, Rasipuram, Namakkal</li>
+                <li>+91 9047075909</li>
+                <li><a href="mailto:ananth9280@gmail.com">ananth9280@gmail.com</a></li>
+                <li><a href="https://www.linkedin.com/in/01ananth-s">linkedin.com/in/01ananth-s</a></li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Master of Computer Applications</h4>
+              <h5>Aug 2021 - Aug 2023</h5>
+              <p><em>Paavai Engineering College</em></p>
+              <p>Scored 65% in MCA with a focus on system administration and IT infrastructure.</p>
+            </div>
+            <div class="resume-item">
+              <h4>B.Com in Computer Applications</h4>
+              <h5>Aug 2016 - Oct 2019</h5>
+              <p><em>Muthayammal College of Arts and Science</em></p>
+              <p>Graduated with 60% focusing on foundational computing and commerce.</p>
+            </div>
+
+            <h3 class="resume-title">Certifications</h3>
+            <div class="resume-item">
+              <ul>
+                <li>Linux OS (OpenSUSE) – Mar 2024</li>
+                <li>Cisco CCNA 200-125 – Mar 2024</li>
+                <li>ENCOR: LISP & VXLAN – Apr 2024</li>
+                <li>Introduction to Networks – Dec 2024</li>
+                <li>AWS Academy Data Engineering – Apr 2025</li>
+                <li>AWS Academy Machine Learning – Apr 2025</li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+            <h3 class="resume-title">Professional Experience</h3>
+            <div class="resume-item">
+              <h4>System Administrator</h4>
+              <h5>May 2023 – June 2025</h5>
+              <p><em>Infosys Springboard</em></p>
+              <ul>
+                <li>Provided technical support for over 300 users including hardware, software, and network troubleshooting.</li>
+                <li>Configured and monitored firewalls, antivirus, and VPNs for secure access.</li>
+                <li>Managed Windows and Linux servers to ensure high availability and uptime.</li>
+              </ul>
+            </div>
+
+            <h3 class="resume-title">Projects</h3>
+            <div class="resume-item">
+              <h4>Network Infrastructure Upgrade – Paavai Institutions</h4>
+              <ul>
+                <li>Upgraded campus-wide network switches and firewalls, reducing downtime by 30% and improving security.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Automated Backup System Using PowerShell</h4>
+              <ul>
+                <li>Developed a scheduled backup script with daily incremental backups, error logging, and reporting.</li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer id="footer" class="footer light-background">
+    <div class="container">
+      <div class="copyright text-center ">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Ananth S</strong> <span>All Rights Reserved</span></p>
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a href="https://www.linkedin.com/in/01ananth-s"><i class="bi bi-linkedin"></i></a>
+      </div>
+      <div class="credits">
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer>
+
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <div id="preloader"></div>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/js/main.js"></script>
+</body>
+
+</html>
