Updated website content

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Certified System Admin | DevOps | Virtualization | IT Support</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -105,7 +105,7 @@
 <div class="row">
   <div class="col-lg-6">
     <ul>
-      <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Not Mentioned</span></li>
+      <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>19/JULY/1999</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.linkedin.com/in/01ananth-s</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9047075909</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Rasipuram, Namakkal</span></li>
@@ -113,15 +113,14 @@
   </div>
   <div class="col-lg-6">
     <ul>
-      <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>Not Mentioned</span></li>
+      <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>25</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MCA, B.Com(CA)</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ananth9280@gmail.com</span></li>
       <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
      </ul>
   
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Experienced System Administrator | Infrastructure & Network Specialist
             </p>
           </div>
         </div>
@@ -136,7 +135,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Certified System Admin | DevOps | Virtualization | IT Support</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -205,7 +204,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Facts</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Certified System Admin | DevOps | Virtualization | IT Support</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -252,7 +251,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>MY TEAM</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Certified System Admin | DevOps | Virtualization | IT Support</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
