Updated website content

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <li><a href="#">OFFLINE</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">CONNUNICATION</a></li>
+                  <li><a href="F:\ananth\ananth system admin\NEW WEBSITE\index.html">NEW WEBSITE</a></li>
                   <li><a href="#">CHAT BOT</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
