--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>MY WEBSITE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="NEW WEBSITE\index.html">NEW WEBSITE</a></li>
+              <li><a class="nav-link" href="NEW WEBSITE/index.html">NEW WEBSITE</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">NEW ONE</a></li>
