Updated website content

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <a href=""><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
-        Designed by <a href="https://www.credly.com/users/ananth-s1688">ANANTH</a> Distributed by <a href=“####>ThemeWagon
+        Designed by <a href="https://www.credly.com/users/ananth-s1688">ANANTH</a> Distributed by <a href=“####>WEB DESIGNER
       </div>
     </div>
 
