--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <li><a class="nav-link" href="NEW WEBSITE/index.html">NEW PAGE</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">NEW ONE</a></li>
+                  <li><a href="#">COMMUNICATION</a></li>
                   <li><a href="#">CHAT BOT</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
