--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="#">COMMUNICATION</a></li>
-                  <li><a href="#">CHAT BOT</a></li>
+                  <li><a href="#">INFORMACTION</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
                   <li><a href="#">Deep Dropdown 5</a></li>
