--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">S DEAVAVISVA</h1>
+        <h1 class="sitename">ANANTH</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -88,7 +88,7 @@
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>ANANTH </h2>
+            <h2>S DEAVAWISVA </h2>
             <p>I’m a professional web developer specializing in modern, responsive websites.</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
