--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>S DEAVAWISVA </h2>
+            <h2>ANANTH </h2>
             <p>I’m a professional web developer specializing in modern, responsive websites.</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
