--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>MY WEBSITE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a class="nav-link" href="NEW WEBSITE/index.html">NEW PAGE</a></li>
+              <li><a class="nav-link" href="NEW WEBSITE/index.html">Deep Dropdown 3</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">COMMUNICATION</a></li>
-                  <li><a href="#">INFORMACTION</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 3</a></li>
                   <li><a href="#">Deep Dropdown 4</a></li>
                   <li><a href="#">Deep Dropdown 5</a></li>
