--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
           <li class="dropdown"><a href="#"><span>MY WEBSITE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a class="nav-link" href="NEW WEBSITE/index.html">WEBSITE</a></li>
+              </li>
+              <li><a href="#">Dropdown 2</a></li>
+              <li><a href="#">Dropdown 3</a></li>
+              <li><a href="#">Dropdown 4</a></li>
+            </ul>
           </li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
