--- a/index.html
+++ b/index.html
@@ -49,7 +49,15 @@
           <li><a href="portfolio.html">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>MY WEBSITE</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a class="nav-link" href="NEW WEBSITE/index.html">WEBSITE</a></li>
+              <li><a class="nav-link" href="NEW WEBSITE/index.html">NEW PAGE</a></li>
+              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="#">COMMUNICATION</a></li>
+                  <li><a href="#">INFORMACTION</a></li>
+                  <li><a href="#">Deep Dropdown 3</a></li>
+                  <li><a href="#">Deep Dropdown 4</a></li>
+                  <li><a href="#">Deep Dropdown 5</a></li>
+                </ul>
               </li>
               <li><a href="#">Dropdown 2</a></li>
               <li><a href="#">Dropdown 3</a></li>
